k8s.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "okteto_hello"
  annotations:
    dev.okteto.com/auto-ingress: "true"
  name: "okteto-hello-sv"
spec:
  ports:
  - name: "svc-1-helloworl"
    port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "okteto_hello"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "okteto_hello"
  name: "okteto-hello-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "okteto_hello"
  template:
    metadata:
      labels:
        app: "okteto_hello"
    spec:
      containers:
      - image: "wso2inc/hello:v0.1.0"
        imagePullPolicy: "IfNotPresent"
        lifecycle:
          preStop:
            exec:
              command:
              - "sleep"
              - "15"
        name: "okteto-hello-deployment"
        ports:
        - containerPort: 9090
          name: "svc-1-helloworl"
          protocol: "TCP"
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "200m"
      nodeSelector: {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
  name: hello-world
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: 8080
        path: /
